[workspace]
resolver = "2"
members = ["neuron_procmacro", "example_project"]

[package]
name = "neuron-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
neuron-procmacro = { path = "neuron_procmacro" }
thiserror = "2.0"
anyhow = "1.0"
bytemuck = "1.20"
pollster = "0.4"
log = "0.4"
uuid = "1.11"
rand = "0.8"
mint = "0.5"
cgmath = "0.18"
winit = "0.30"
ash = "0.38.0"
ash-window = "0.13"
gpu-allocator = "0.27"

[target.'cfg(target_os="linux")'.dependencies]
xcb = "1.5.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
vulkan_linked = ["ash/linked"]